--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,13 +3,33 @@
 @tailwind utilities;
 
 
-*::selection {
+html {
+    scroll-behavior: smooth;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: var(--background-color);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: red;
+    border-radius: 20px;
+  }
+  
+  *::selection {
     color: white;
     background-color: red;
   }
   
+  
   body {
     top: 0 !important;
+    
   }
   
   .google-translate-container {
